# leukeleu-django-gdpr

./: .bumpversion.cfg  .editorconfig  .flake8  CHANGELOG.md  LICENSE  Makefile  README.md  bitbucket-pipelines.yml  pyproject.toml  requirements_local.txt  runtests.py  setup.cfg  setup.py
.github/: CODEOWNERS  dependabot.yml
.github/actions/python-lint/: action.yml
.github/actions/python-setup/: action.yml
.github/actions/python-test/: action.yml
.github/release-drafter/: config.yml
.github/workflows/: ci.yml  release-drafter.yml  release.yml  test.yml
gdpr/: __init__.py  apps.py  writer.py
gdpr/management/commands/: gdpr.py  makeencryptmigration.py
leukeleu_django_gdpr/: __init__.py  anonymize.py  apps.py  checks.py  gdpr.py
leukeleu_django_gdpr/management/commands/: anonymize.py  gdpr.py
tests/: runner.py  test_anonymizer.py  test_checks.py  test_save_load.py  test_settings.py
tests/custom_users/: models.py
tests/test_commands/: test_serializer.py
