[metadata]
name = leukeleu-django-gdpr
description = leukeleu-django-gdpr is a tool to generate GDPR documentation based on the project's models.
long_description = file: README.rst
author = Wouter de Vries
author_email = wdevries@leukeleu.nl
url = https://github.com/leukeleu/leukeleu-django-gdpr
license = proprietary
classifiers =
    License :: OSI Approved :: MIT License
    Development Status :: 5 - Production/Stable
    Framework :: Django
project_urls =
    Source = https://github.com/leukeleu/leukeleu-django-gdpr/
    Tracker = https://github.com/leukeleu/leukeleu-django-gdpr/issues

[options]
python_requires = >=3.6
packages = find:
install_requires =
    Django
    tabulate

[options.packages.find]
exclude =
    tests.*

[options.extras_require]
test =
    # Linting
    black~=22.3
    check-manifest==0.48
    flake8~=4.0.1
    flake8-assertive>=1.3.0,<2.2.0
    flake8-black~=0.3.0
    flake8-bugbear~=22.7.1
    flake8-isort~=4.1.1
    pep8-naming>=0.12.0,<0.14.

    # Testing
    coverage~=6.2.0
